Make sure the language text not truncated too much

--- a/src/components/compose.css
+++ b/src/components/compose.css
@@ -259,6 +259,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   max-width: 100%;
+  min-width: 4ch;
 }
 
 #compose-container .compose-footer {
